# LinuxOpenCV

./: CMakeLists.txt  README.md  main.cpp
